<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_weight="0.23"
                android:id="@+id/goal_title_statslist_item"
                android:text="@string/goal_title_statslist_item"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textSize="16sp"
                android:id="@+id/goal_statslist_item"
                android:text="@string/default_value_goal_statslist"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:textSize="18sp"
                android:text="@string/finished_title_statslist"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textSize="16sp"
                android:id="@+id/finished_statslist_item"
                android:text="@string/default_value_finished_statslist"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.55"
                android:textSize="18sp"
                android:text="@string/duration_title_statslist"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:textSize="16sp"
                android:id="@+id/duration_statslist_item"
                android:text="@string/default_value_duration_statslist"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"
                android:textSize="18sp"
                android:text="@string/date_statslist"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.08"
                android:textSize="16sp"
                android:id="@+id/date_statslist_item"
                android:text="@string/default_value_date_statslist"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/comment_title_stats_list"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/comment_statslist_item"
            android:text="@string/default_value_comment_statslist"/>

    </LinearLayout>

</RelativeLayout>