<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/background_trainer_page">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="5dp"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/session_rotations_title_trainer_page"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/session_count_rotations_textview_trainerpage"
                android:text="@string/default_value_session_rotations_trainer_page"
                android:layout_marginEnd="6dp"
                android:textSize="18sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/allrotations_title_trainer_page"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/whole_count_rotations_textview_trainerpage"
                android:text="@string/default_value_allrotations_trainerpage"
                android:layout_marginEnd="6dp"
                android:textSize="18sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/duration_title_trainerpage"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/duration_rotations_textview_trainerpage"
                android:text="@string/default_value_duration_trainerpage"
                android:layout_marginEnd="6dp"
                android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/angle_textview_trainerpage"
            android:text="@string/start_message"
            android:textSize="28sp"
            android:visibility="gone"
            android:textAlignment="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/input_count_rotations_trainerpage"
            android:hint="@string/input_count_rotations_hint_trainerpage"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/startstop_button_trainerpage"
            android:text="@string/startstop_button_title_trainerpage"/>

    </LinearLayout>

</RelativeLayout>