<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/question_form_commentdialog"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_title_commentdialog"
                android:textAlignment="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_yes_commentdialog"
                    android:text="@string/yes_button_title_commentdialog"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_no_commentdialog"
                    android:text="@string/no_button_title_commentdialog"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/comment_form_commentdialog"
            android:visibility="gone"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_comment_commentdialog"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/submit_button_comment_commentdialog"
                android:text="@string/submit_button_title_commentdialog"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>